# tinker-cookbook

gepa_rl_exp/: .gitignore  README.md  claude.md  pyproject.toml
gepa_rl_exp/scripts/: eval_math_rl.sh  run_alternation.py  run_expert_iteration.py  run_gepa.py  smoke_test.sh  train_math_rl.sh
gepa_rl_exp/src/: __init__.py  expert_iteration.py  expert_iteration_logging.py  hint_generation.py  hint_strategy.py  prompt_strategy.py  prompt_templates.py  teacher_client.py  train.py
gepa_rl_exp/src/gepa/: __init__.py  config.py  optimizer.py  reflection.py  trace.py
gepa_rl_exp/tests/: test_expert_iteration.py
tinker_cookbook/recipes/math_rl/: arithmetic_env.py  math_env.py
tinker_cookbook/rl/: problem_env.py
tinker_cookbook/utils/: ml_log.py
